[package]
name = "udbg"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["metaworm <metaworm@outlook.com>"]
description = "cross-platform library for binary debugging and memory hacking"
homepage = "https://crates.io/crates/udbg"
documentation = "https://docs.rs/udbg"
repository = "https://github.com/udbg/udbg"
include = ["/src", "README.md", "/examples"]

[features]
dbgeng = []

[dependencies]
cfg-if = '1.0'
glob = '0.3'
hex = '0.4'
log = '0.4'
ctor = '0.2'
regex = '1.5'
pdb = '0.8'
extend = '1.1'
anyhow = '1.0'
futures = '0.3'
thiserror = '1.0'
cstrptr = '0.1'
crossbeam = '0.8'
parking_lot = '0.12'
serde-value = '0.7'
derive_more = '0.99'
failed-result = '0.2'
serde_bytes = '0.11'
log-error = "0.1"
lru-cache = '0.1'
arc-swap = "1.6"
goblin = {version = '0.8'}
memmap2 = {version = '0.9'}
cpp_demangle = {version = '0.4'}
bitflags = {version = '2.0', features = ['serde']}
capstone = {version = '0.12', optional = true}
minidump = {version = '0.22', optional = true}
symbolic = {version = '12.8', optional = true}
symbolic-demangle = {version = '12.8', default-features = false, features = ["cpp", "msvc", "rust"], optional = true}
memoffset = {version = '0.9', features = ['unstable_const']}
ezlua = {version = '0.5', features = ['serde_bytes'], optional = true}
serde = {version = "1.0", default-features = false, features = ['derive', 'rc', 'alloc']}
iced-x86 = {version = '1.21', default-features = false, features = ['decoder', 'std']}

[[bin]]
name = 'tracee'
path = 'src/tracee/main.rs'

[target.'cfg(windows)'.dependencies]
winapi = {version = '0.3.9', features = ["winnt", "errhandlingapi", "winuser", "winbase", "stringapiset"]}
windows = {version = '0.58', features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Management_Deployment",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_System_WinRT",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
]}
ntapi = '0.4'
unicase = '2.6'
msvc-demangler = '0.10'

[target.'cfg(not(windows))'.dependencies]
nix = '0.26'
libc = '0.2'
errno = '0.3'

[target.'cfg(any(target_os="linux",target_os="android"))'.dependencies]
procfs = '0.16'

[target.'cfg(target_os="macos")'.dependencies]
mach2 = '0.4'
scroll = "0.12"
libproc = '0.14'
mach_o_sys = '0.1'

[build-dependencies]
cc = '1'

[dev-dependencies]
flexi_logger = '0.28'
tempfile = '3.6'
minidump-writer = '0.9'
rustyline = {version = '13'}
clap = {version = "4", features = ["derive", "env"]}
ezlua = {version = '0.5', features = ['vendored']}
